--- a/Examples/examples.qrc
+++ b/Examples/examples.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/QtQmlControls">
+    <qresource prefix="/">
         <file alias="SearchModel.qml">SearchModel.qml</file>
     </qresource>
 </RCC>
