--- a/App/App.qrc
+++ b/App/App.qrc
@@ -4,5 +4,6 @@
         <file>icons/back.png</file>
         <file>icons/drawer.png</file>
         <file>images/arrow.png</file>
+        <file>../README.md</file>
     </qresource>
 </RCC>
