--- a/Examples/Examples.qrc
+++ b/Examples/Examples.qrc
@@ -4,9 +4,12 @@
         <file>Accordion/Simple.qml</file>
         <file>SearchModel/Advanced.qml</file>
         <file>Accordion/Advanced.qml</file>
+        <file>Badge/Advanced.qml</file>
+        <file>Badge/Simple.qml</file>
     </qresource>
     <qresource prefix="/">
         <file>SearchModel/README.md</file>
         <file>Accordion/README.md</file>
+        <file>Badge/README.md</file>
     </qresource>
 </RCC>
