--- a/QTypes/QTypes.qrc
+++ b/QTypes/QTypes.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/QTypes">
         <file alias="SearchModel.qml">SearchModel/SearchModel.qml</file>
         <file alias="Accordion.qml">Accordion/Accordion.qml</file>
+        <file alias="Badge.qml">Badge/Badge.qml</file>
     </qresource>
     <qresource prefix="/Resources"/>
 </RCC>
