--- a/QTypes/QTypes.qrc
+++ b/QTypes/QTypes.qrc
@@ -3,6 +3,7 @@
         <file alias="SearchModel.qml">SearchModel/SearchModel.qml</file>
         <file alias="Accordion.qml">Accordion/Accordion.qml</file>
         <file alias="Badge.qml">Badge/Badge.qml</file>
+        <file alias="DropDown.qml">DropDown/DropDown.qml</file>
     </qresource>
     <qresource prefix="/Resources"/>
 </RCC>
