--- a/App/App.qrc
+++ b/App/App.qrc
@@ -5,5 +5,6 @@
         <file>icons/drawer.png</file>
         <file>images/arrow.png</file>
         <file>../README.md</file>
+        <file>icons/round_error_black_18dp.png</file>
     </qresource>
 </RCC>
