--- a/QTypes/QTypes.qrc
+++ b/QTypes/QTypes.qrc
@@ -4,6 +4,7 @@
         <file alias="Badge.qml">Badge/Badge.qml</file>
         <file alias="DropDown.qml">DropDown/DropDown.qml</file>
         <file alias="ImageLoader.qml">ImageLoader/ImageLoader.qml</file>
+        <file alias="JumpTo.qml">JumpTo/JumpTo.qml</file>
         <file alias="SearchModel.qml">SearchModel/SearchModel.qml</file>
     </qresource>
     <qresource prefix="/Resources"/>
